[gd_scene load_steps=11 format=3 uid="uid://b8jrtk1lv0oo0"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_a6eex"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/ProblemSelection/problem_list.gd" id="2_ycbub"]
[ext_resource type="FontFile" uid="uid://cgts3h57wry82" path="res://Textures/Fonts/numbers_font.ttf" id="3_4ro32"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes_and_scripts/UI/Buttons/panelButton.tscn" id="3_tav84"]
[ext_resource type="Texture2D" uid="uid://c3nrennubqoow" path="res://Textures/Buttons/icons/back.png" id="4_jpxs4"]
[ext_resource type="Texture2D" uid="uid://1qi6lr05g0vt" path="res://Textures/Buttons/icons/add.png" id="5_6tky2"]
[ext_resource type="Texture2D" uid="uid://d254b7d0ncxnp" path="res://Textures/Buttons/icons/back_hover.png" id="5_p8e5x"]
[ext_resource type="PackedScene" uid="uid://cmafkxyj8ko4d" path="res://Scenes_and_scripts/UI/PanelItemList.tscn" id="7_weip1"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes_and_scripts/Components/button_sound_component.tscn" id="8_ttb8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2lvc7"]

[node name="ProblemList" type="PanelContainer" node_paths=PackedStringArray("title", "add_button")]
material = ExtResource("1_a6eex")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -474.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("2_ycbub")
title = NodePath("VBoxContainer/Header/VBoxSeperator/Label")
add_button = NodePath("VBoxContainer/AddProblem")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2lvc7")

[node name="VBoxSeperator" type="VBoxContainer" parent="VBoxContainer/Header"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -1
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Header/VBoxSeperator"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_4ro32")
theme_override_font_sizes/font_size = 16
text = "Palletes"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Header/VBoxSeperator"]
show_behind_parent = true
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Close" type="TextureButton" parent="VBoxContainer/Header"]
use_parent_material = true
custom_minimum_size = Vector2(10, 14)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("4_jpxs4")
texture_hover = ExtResource("5_p8e5x")
stretch_mode = 5

[node name="ButtonSoundComponent" parent="VBoxContainer/Header/Close" instance=ExtResource("8_ttb8b")]

[node name="PanelItemList" parent="VBoxContainer" instance=ExtResource("7_weip1")]
layout_mode = 2
size_flags_vertical = 3

[node name="AddProblem" parent="VBoxContainer" instance=ExtResource("3_tav84")]
layout_mode = 2
size_flags_vertical = 8
minimum_size = Vector2(154, 28)
action_mode = 1
icon = ExtResource("5_6tky2")
icon_use_parent_material = true

[connection signal="pressed" from="VBoxContainer/Header/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/AddProblem" to="." method="_on_add_problem_pressed"]
